# ai_stock_trade_helper

./: .dockerignore  .env.example  Dockerfile  README.md  backend.py  celery_backend.py  docker-compose.yaml  env.example  pyproject.toml  requirements.txt  stock_analysis_app.py  supervisord.conf  testDataBuilder.py  trainDataBuilder.py
.github/agents/: code_agent.agent.md
dataset/base/: base_analysis_RLAIF_data.json  base_analysis_RLAIF_test_data.json  base_analysis_SFT_data.json  base_analysis_SFT_test_data.json
dataset/senti/: sentiment_analysis_RLAIF_data.json  sentiment_analysis_RLAIF_test_data.json  sentiment_analysis_SFT_data.json  sentiment_analysis_SFT_test_data.json
dataset/tech/: technical_analysis_RLAIF_data.json  technical_analysis_RLAIF_test_data.json  technical_analysis_SFT_data.json  technical_analysis_SFT_test_data.json
src/ai_stock_trade_helper/: FT_data_maker.py  __init__.py  backend.py  base_crew.py  flow.py  models.py  multi_dimension_crew.py  multi_stock_crew.py  stock_analysis_app.py  synthesis_crew.py
src/ai_stock_trade_helper/config/: agents.yaml  tasks.yaml
src/ai_stock_trade_helper/skills/base-analysis/: SKILL.md
src/ai_stock_trade_helper/skills/multi-stock-analysis/: SKILL.md
src/ai_stock_trade_helper/skills/sentiment-analysis/: SKILL.md
src/ai_stock_trade_helper/skills/synthesis-analysis/: SKILL.md
src/ai_stock_trade_helper/tools/: __init__.py  screen_stocks.py  stock_tools.py  stock_tools_func.py
src/ai_stock_trade_helper/util/: caculate_func.py  industyInfo.py
(+1 files in other folders)
