[project]
name = "ai_stock_trade_helper"
version = "0.1.0"
description = "ai-stock-trade-helper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "akshare>=1.18.55",
    "baostock>=0.9.1",
    "celery>=5.6.3",
    "crewai[tools]==1.14.2",
    "fastapi>=0.136.0",
    "flower>=2.0.1",
    "redis>=7.4.0",
    "streamlit>=1.56.0",
    "supervisor>=4.3.0",
    "tushare>=1.4.29",
]

[project.scripts]
ai_stock_trade_helper = "ai_stock_trade_helper.main:run"
run_crew = "ai_stock_trade_helper.main:run"
train = "ai_stock_trade_helper.main:train"
replay = "ai_stock_trade_helper.main:replay"
test = "ai_stock_trade_helper.main:test"
run_with_trigger = "ai_stock_trade_helper.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
